Bug 358455 - Layer styles are rendered incorrectly
Summary: Layer styles are rendered incorrectly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: 2.9.10
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-23 22:06 UTC by cheteron
Modified: 2016-02-01 07:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Layer style draw incorrect (49.45 KB, image/jpeg)
2016-01-23 22:07 UTC, cheteron
Details
incorrect layer style example in 2.9.10 (37.72 KB, image/png)
2016-01-27 10:12 UTC, guruguru.sp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cheteron 2016-01-23 22:06:11 UTC
Layer style don't draw full sometimes, and work very slow. Preview option don't work too

Reproducible: Always

Steps to Reproduce:
1.fill layer full
2.activate any option of style
Comment 1 cheteron 2016-01-23 22:07:13 UTC
Created attachment 96806 [details]
Layer style draw incorrect
Comment 2 Halla Rempt 2016-01-24 08:07:05 UTC
Are you using the 2.9.10 stable release or the animation beta? If the latter, what happens if you disable instant preview?
Comment 3 cheteron 2016-01-25 23:05:20 UTC
Yep stable release 2.9.10 without animation.
When disable preview, styles work all the same, and appear incorrect (see attachment)
Comment 4 Halla Rempt 2016-01-27 10:03:42 UTC
11:02:54 < guruguru> boud: Testing 358455 now. Inner glow looks odd in 2.9.10 indeed.
Comment 5 guruguru.sp 2016-01-27 10:12:55 UTC
Created attachment 96864 [details]
incorrect layer style example in 2.9.10

It might be easier to see the odd effect with a layer with a sphere.
Drop Shadow and Stroke are working fine, but other effects seem to have rectangle artifacts.
If I toggle LayerStyle visibility to off then on, the display becomes normal.
Comment 6 Dmitry Kazakov 2016-01-30 11:20:20 UTC
Git commit 4029173a1a9bbe5d879bc70bc322eea96acc8582 by Dmitry Kazakov.
Committed on 30/01/2016 at 11:20.
Pushed by dkazakov into branch 'calligra/2.9'.

Don't pre-fill multiple projection with a contents of the source device

Basically, the projection should be clean before being passed to the
layer style filter. In the recalculation code it is done by calling
clear() before the actual recalculation, therefore we should do the same
for initialization phase.

Fixes T1402

M  +3    -2    krita/image/layerstyles/kis_multiple_projection.cpp

http://commits.kde.org/calligra/4029173a1a9bbe5d879bc70bc322eea96acc8582
Comment 7 Halla Rempt 2016-02-01 07:32:50 UTC
Git commit 4ec7efa2d39b3c5523d0c1e9e901c8aaa374c7d3 by Boudewijn Rempt.
Committed on 01/02/2016 at 07:18.
Pushed by rempt into branch 'master'.

Don't pre-fill multiple projection with a contents of the source device

Basically, the projection should be clean before being passed to the
layer style filter. In the recalculation code it is done by calling
clear() before the actual recalculation, therefore we should do the same
for initialization phase.

Fixes T1402

(Forward-ported from 2.9)

M  +3    -2    libs/image/layerstyles/kis_multiple_projection.cpp

http://commits.kde.org/krita/4ec7efa2d39b3c5523d0c1e9e901c8aaa374c7d3