Don't pre-fill multiple projection with a contents of the source device

Basically, the projection should be clean before being passed to the
layer style filter. In the recalculation code it is done by calling
clear() before the actual recalculation, therefore we should do the same
for initialization phase.

Fixes T1402
BUG:358455

(Forward-ported from 2.9)