libs/image/layerstyles/kis_multiple_projection.cpp
@@ -74,13 +74,14 @@ KisPaintDeviceSP KisMultipleProjection::getProjection(const QString &id, const Q
             PlanesMap::iterator writeIt = m_d->planes.find(id);
             if (writeIt == m_d->planes.end()) {
                 ProjectionStruct plane;
-                plane.device = new KisPaintDevice(*prototype);
+                plane.device = new KisPaintDevice(prototype->colorSpace());
+                plane.device->prepareClone(prototype);
                 plane.compositeOpId = compositeOpId;
                 writeIt = m_d->planes.insert(id, plane);
             } else if (writeIt->compositeOpId != compositeOpId ||
                        !(*writeIt->device->colorSpace() == *prototype->colorSpace())) {
 
-                writeIt->device->makeCloneFromRough(prototype, prototype->extent());
+                writeIt->device->prepareClone(prototype);
                 writeIt->compositeOpId = compositeOpId;
             }
 
